# llm-verdict

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  REQUIREMENTS.md  pyproject.toml
configs/criteria/: code_review.yaml
configs/judges/: example.yaml
configs/models/: claude-sonnet-4-6.yaml
llm_verdict/: cli.py
llm_verdict/core/: hashing.py  models.py  stats.py  verdict.py
llm_verdict/graders/: base.py  registry.py
llm_verdict/graders/judge/: __init__.py  calibration.py  config.py  grader.py  json_repair.py
llm_verdict/graders/programmatic/: code_exec_grader.py  exact_match.py  json_schema_grader.py  regex_grader.py  tool_call_grader.py
llm_verdict/providers/: base.py  litellm_client.py  registry.py
llm_verdict/reporting/: __init__.py  data.py  renderer.py
llm_verdict/runner/: cache.py  engine.py  sandbox.py
llm_verdict/store/: artifacts.py  duck.py  views.sql
llm_verdict/tasks/: add_from_failure.py  loader.py  schemas.py
suites/_examples/: code_exec.yaml  exact.yaml  json_schema.yaml  judged.yaml  regex.yaml  tool_call.yaml
tests/: mock_client.py  test_add_from_failure.py  test_cache.py  test_cli.py  test_code_exec_grader.py  test_engine.py  test_graders.py  test_judge.py  test_loader.py  test_providers.py  test_reports.py  test_sandbox.py  test_store.py
tests/core/: test_hashing.py  test_models.py  test_stats.py  test_verdict.py
