[project]
name = "llm-verdict"
version = "0.1.0"
description = "Provider-agnostic LLM evaluation harness"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "duckdb>=0.9",
    "pyyaml>=6.0",
    "litellm>=1.40",
    "jsonschema>=4.20",
    "anyio>=4.0",
    "python-ulid>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.scripts]
verdict = "llm_verdict.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["llm_verdict.core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "scipy-stubs>=1.4",
]
